# Utilc

./: .gitignore  CMakeLists.txt  README.md
examples/: alloc_example.c  assume_example.c  cleanup_example.c  dynarray_example.c  hashmap_example.c  iterator_example.c  matmath_example.c  scope_example.c  stringpool_example.c  strpool_example.c  strviu_example.c  strviuparse_example.c  vecmath_example.c
include/utilc/: alloc.h  cleanup.h  dynarray.h  hashmap.h  strpool.h  strviu.h  vecmath.h
